chore: Add support for Java 17
Closes gravitee-io/issues#6708