@@ -55,12 +55,12 @@
 
     <properties>
         <!-- Vert.X version is mandatory for vertx-grpc-protoc-plugin in gravitee-gateway-standalone-container -->
-        <vertx.version>4.1.3</vertx.version>
+        <vertx.version>4.2.1</vertx.version>
         <!-- Gravitee dependencies version -->
-        <gravitee-bom.version>1.4</gravitee-bom.version>
+        <gravitee-bom.version>1.5-SNAPSHOT</gravitee-bom.version>
         <gravitee-alert-api.version>1.8.0</gravitee-alert-api.version>
         <gravitee-cockpit-api.version>1.9.0</gravitee-cockpit-api.version>
-        <gravitee-common.version>1.23.0</gravitee-common.version>
+        <gravitee-common.version>1.24.0-SNAPSHOT</gravitee-common.version>
         <gravitee-connector-api.version>1.0.0</gravitee-connector-api.version>
         <gravitee-definition.version>1.30.1</gravitee-definition.version>
         <gravitee-expression-language.version>1.7.2</gravitee-expression-language.version>
@@ -99,14 +99,14 @@
         <jackson-mapper-asl.version>1.9.13</jackson-mapper-asl.version>
         <java-jwt.version>3.18.2</java-jwt.version>
         <javassist.version>3.28.0-GA</javassist.version>
-        <javax.activation-api.version>1.2.0</javax.activation-api.version>
-        <javax.annotation-api.version>1.3.2</javax.annotation-api.version>
+        <jakarta.validation-api.version>2.0.2</jakarta.validation-api.version>
+        <jakarta.annotation-api.version>1.3.5</jakarta.annotation-api.version>
         <javax.inject.version>1</javax.inject.version>
         <jakarta.mail.version>2.0.1</jakarta.mail.version>
         <javax.servlet-api.version>4.0.1</javax.servlet-api.version>
-        <javax.transaction-api.version>1.3</javax.transaction-api.version>
-        <javax.validation-api.version>2.0.1.Final</javax.validation-api.version>
-        <jaxb-api.version>2.3.1</jaxb-api.version>
+        <jakarta.transaction-api.version>1.3.3</jakarta.transaction-api.version>
+        <jakarta.activation-api.version>1.2.2</jakarta.activation-api.version>
+        <jakarta.xml.bind-api.version>2.3.3</jakarta.xml.bind-api.version>
         <jmh.version>1.33</jmh.version>
         <json-patch.version>1.13</json-patch.version>
         <json-path.version>2.6.0</json-path.version>
@@ -516,25 +516,25 @@
             <dependency>
                 <groupId>com.sun.xml.bind</groupId>
                 <artifactId>jaxb-impl</artifactId>
-                <!-- FIXME: upgrade version when upgrading spring version -->
-                <version>2.1.2</version>
-            </dependency>
-            <dependency>
-                <groupId>javax.xml.bind</groupId>
-                <artifactId>jaxb-api</artifactId>
-                <version>${jaxb-api.version}</version>
+                <version>2.3.5</version>
             </dependency>
 
             <dependency>
-                <groupId>javax.activation</groupId>
-                <artifactId>javax.activation-api</artifactId>
-                <version>${javax.activation-api.version}</version>
+                <groupId>jakarta.xml.bind</groupId>
+                <artifactId>jakarta.xml.bind-api</artifactId>
+                <version>${jakarta.xml.bind-api.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>javax.annotation</groupId>
-                <artifactId>javax.annotation-api</artifactId>
-                <version>${javax.annotation-api.version}</version>
+                <groupId>jakarta.activation</groupId>
+                <artifactId>jakarta.activation-api</artifactId>
+                <version>${jakarta.activation-api.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>jakarta.annotation</groupId>
+                <artifactId>jakarta.annotation-api</artifactId>
+                <version>${jakarta.annotation-api.version}</version>
             </dependency>
 
             <dependency>
@@ -556,15 +556,15 @@
             </dependency>
 
             <dependency>
-                <groupId>javax.transaction</groupId>
-                <artifactId>javax.transaction-api</artifactId>
-                <version>${javax.transaction-api.version}</version>
+                <groupId>jakarta.transaction</groupId>
+                <artifactId>jakarta.transaction-api</artifactId>
+                <version>${jakarta.transaction-api.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>javax.validation</groupId>
-                <artifactId>validation-api</artifactId>
-                <version>${javax.validation-api.version}</version>
+                <groupId>jakarta.validation</groupId>
+                <artifactId>jakarta.validation-api</artifactId>
+                <version>${jakarta.validation-api.version}</version>
             </dependency>
 
             <dependency>
@@ -830,6 +830,13 @@
                         <phase>validate</phase>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>--add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.util.regex=ALL-UNNAMED --add-opens java.base/java.util.stream=ALL-UNNAMED --add-opens java.base/java.net=ALL-UNNAMED</argLine>
+                </configuration>
             </plugin>
         </plugins>
     </build>
